--- a/app/src/main/res/layout/room_traffic_lights.xml
+++ b/app/src/main/res/layout/room_traffic_lights.xml
@@ -68,22 +68,42 @@
             android:gravity="center_horizontal"
             android:textIsSelectable="false"/>
 
-        <Button
-            android:id="@+id/bookNow"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:id="@+id/layoutBookButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
-            android:layout_below="@id/reservationInfo"
-            android:text="@string/bookNow"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            android:textIsSelectable="false"/>
+            android:layout_below="@id/reservationInfo">
+
+            <Button
+                android:id="@+id/book"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/book"
+                android:textSize="40sp"
+                android:textStyle="bold"
+                android:textIsSelectable="false"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/bookNow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/bookNow"
+                android:textSize="40sp"
+                android:textStyle="bold"
+                android:textIsSelectable="false"
+                android:layout_marginLeft="85dp"
+                android:layout_marginStart="85dp"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/disconnected"
             android:orientation="vertical"
-            android:layout_below="@id/bookNow"
+            android:layout_below="@id/layoutBookButtons"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
@@ -107,6 +127,7 @@
                 android:textStyle="bold"
                 android:textAllCaps="true"/>
         </LinearLayout>
+
     </RelativeLayout>
 
     <TextView
