--- a/app/src/main/res/layout/activity_check_permissions.xml
+++ b/app/src/main/res/layout/activity_check_permissions.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.futurice.android.reservator.CheckPermissionsActivity"
-    >
+    tools:context="com.futurice.android.reservator.CheckPermissionsActivity">
 
-  <TextView
-      android:text="Reservator Needs Permissions to Work!"
-      android:textColor="@android:color/white"
-      android:layout_gravity="center"
-      android:textSize="@dimen/appCheckPermissionNotAllowed"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Reservator Needs Permissions to Work!"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/appCheckPermissionNotAllowed" />
 </FrameLayout>
