Fix lint rules and remove unused resources

--- a/app/src/main/res/layout/reservation_popup.xml
+++ b/app/src/main/res/layout/reservation_popup.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/relativeLayout1"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:background="#6666"
-                android:isScrollContainer="false">
+    android:id="@+id/container_reservation_popup"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="center"
+    android:background="#6666"
+    android:isScrollContainer="false">
 
     <FrameLayout
         android:id="@+id/frameLayout1"
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/popup_background"
-            android:padding="10dp"/>
+            android:padding="10dp" />
     </FrameLayout>
 
 </RelativeLayout>
