--- a/app/src/main/res/layout/lobby_activity.xml
+++ b/app/src/main/res/layout/lobby_activity.xml
@@ -1,27 +1,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/linearLayout"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#fff"
-                android:padding="0dip">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#fff"
+    android:orientation="horizontal"
+    android:padding="0dip">
 
     <ScrollView
-        android:id="@+id/scrollView1"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp">
+        android:layout_marginTop="0dp"
+        android:layout_weight="2">
 
         <LinearLayout
             android:id="@+id/linearLayout1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="60dp">
-        </LinearLayout>
+            android:paddingTop="60dp" />
     </ScrollView>
 
     <FrameLayout
@@ -35,9 +32,7 @@
             style="@style/DigitalClockStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            >
-        </DigitalClock>
+            android:layout_gravity="center" />
     </FrameLayout>
 
 </LinearLayout>
