--- a/app/src/main/res/layout/lobby_reservation_row.xml
+++ b/app/src/main/res/layout/lobby_reservation_row.xml
@@ -7,7 +7,6 @@
     android:gravity="center_vertical">
 
     <FrameLayout
-        android:id="@+id/outerTitleLayout"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -15,7 +14,6 @@
         android:layout_marginRight="20dp">
 
         <LinearLayout
-            android:id="@+id/middleTitleLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -90,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="20dp"
-                android:width="200px"
+                android:width="200dp"
                 android:text="&lt;status&gt;"></TextView>
 
             <FrameLayout
