--- a/app/src/main/res/layout/wizard_account_selection.xml
+++ b/app/src/main/res/layout/wizard_account_selection.xml
@@ -28,7 +28,7 @@
             <RadioGroup
                 android:id="@+id/wizard_accounts_radiogroup"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
             </RadioGroup>
 
         </ScrollView>
