--- a/app/src/main/res/layout-v17/lobby_activity.xml
+++ b/app/src/main/res/layout-v17/lobby_activity.xml
@@ -9,9 +9,9 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
-        android:layout_weight="2">
+        android:layout_weight="3">
 
         <LinearLayout
             android:id="@+id/linearLayout1"
@@ -21,19 +21,14 @@
             android:paddingTop="60dp" />
     </ScrollView>
 
-    <FrameLayout
+    <TextClock
+        android:id="@+id/digitalClock1"
+        style="@style/DigitalClockStyle"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="1"
-        android:padding="32dp">
+        android:padding="32dp" />
 
-        <TextClock
-            android:id="@+id/digitalClock1"
-            style="@style/DigitalClockStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-
-    </FrameLayout>
 
 </LinearLayout>
