--- a/app/src/main/res/layout/activity_check_permissions.xml
+++ b/app/src/main/res/layout/activity_check_permissions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Reservator Needs Permissions to Work!"
+        android:text="@string/message_permissions_are_required"
         android:textColor="@android:color/white"
         android:textSize="@dimen/appCheckPermissionNotAllowed" />
-</FrameLayout>
+</merge>
