--- a/app/src/main/res/layout/lobby_activity.xml
+++ b/app/src/main/res/layout/lobby_activity.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:layout_weight="2">
 
@@ -21,18 +22,13 @@
             android:paddingTop="60dp" />
     </ScrollView>
 
-    <FrameLayout
+    <DigitalClock
+        android:id="@+id/digitalClock1"
+        style="@style/DigitalClockStyle"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="1"
-        android:padding="32dp">
-
-        <DigitalClock
-            android:id="@+id/digitalClock1"
-            style="@style/DigitalClockStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-    </FrameLayout>
+        android:padding="32dp" />
 
 </LinearLayout>
