--- a/app/src/main/res/layout-v17/lobby_activity.xml
+++ b/app/src/main/res/layout-v17/lobby_activity.xml
@@ -8,10 +8,7 @@
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginBottom="0dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_weight="3">
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/linearLayout1"
@@ -24,11 +21,9 @@
     <TextClock
         android:id="@+id/digitalClock1"
         style="@style/DigitalClockStyle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="1"
-        android:padding="32dp" />
-
+        android:padding="16dp" />
 
 </LinearLayout>
